<resources>

    <string name="url_api"></string>

    //Página de Login
    <string name="app_name">GOAL</string>
    <string name="slogan">A gente sonha e chega lá!</string>
    <string name="criarConta">Criar Conta</string>
    <string name="Esqueci">Esqueci minha senha</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="falhaLogin">Falha no login</string>

    //Página de apresentação de metas
    <string name="totalMetas">Saldo Metas</string>
    <string name="Disponivel">Saldo Disponível</string>
    <string name="CriarMeta">Criar Meta</string>
    <string name="NovaMeta">Nova Meta</string>
    <string name="SaldoAtual">Atualize seu saldo aqui:</string>

    // Página Promoção
    <string name="Parabéns">PARABÉNS</string>
    <string name="Incentivo">Você ganhou R$100,00 para iniciar sua experiência com a gente!</string>

    //Página de Edição / Criação e Exclusão de metas
    <string name="m0a25">Vamos lá, todo começo é mais difícil</string>
    <string name="m26a50">Olho na meta, você está próximo da metada!</string>
    <string name="m51a75">Quase lá, você está próximo de sua meta</string>
    <string name="m76a100">Falta pouco para realizar o seu sonho!</string>

    // Estrutura da página de criação / edição e exclusão.
    <string name="Categoria">Categoria</string>
    <string name="NomeDaMeta">Nome da Meta</string>
    <string name="Prazo">Prazo da Meta</string>
    <string name="MetaInvestimento">Meta de Investimento</string>
    <string name="Salvar">Salvar meta</string>
    <string name="Excluir">Excluir Meta</string>
    <string name="title_activity_meta_list_adapter">MetaListAdapter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    //Página em construção
    <string name="trabalhando">Ainda estamos trabalhando nesta tela e em breve ela estará disponível.</string>
    <string name="construcao">Em construção!</string>
    <string name="opa">Opa!</string>
    <string name="voltar">Voltar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Mensagem erro API
    <string name="erroApi">Falha na API</string>
</resources>