<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/NomeGoal"
        android:layout_width="315dp"
        android:layout_height="63dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/roxoEscuro"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Slogan"
        android:layout_width="216dp"
        android:layout_height="69dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/roxoEscuro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeGoal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="297dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Slogan"
        app:srcCompat="@drawable/page1" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/usuario"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:text="@string/entrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSenha"
        app:layout_constraintVertical_bias="0.431" />

</androidx.constraintlayout.widget.ConstraintLayout>