<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/opa"
        android:textAlignment="center"
        android:textColor="@color/roxoEscuro"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="253dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/construcao"
        android:textAlignment="center"
        android:textColor="@color/roxoEscuro"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="276dp"
        android:layout_height="259dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/imagem2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:srcCompat="@drawable/construcao" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/border"
        android:fontFamily="@font/ubuntu"
        android:text="@string/voltar"
        app:backgroundTint="@color/laranja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="348dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/trabalhando"
        android:textAlignment="center"
        android:textColor="@color/roxoEscuro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>