<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="423dp"
        android:layout_height="138dp"
        android:background="@android:color/holo_orange_light"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/btnFecharMain"
            android:layout_width="79dp"
            android:layout_height="76dp"
            android:layout_marginEnd="284dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/imagem2" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="33dp"
            android:layout_height="42dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.166"
            app:srcCompat="@drawable/people" />

        <TextView
            android:id="@+id/textViewNomeMetaAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/totalMetas"
            android:textColor="@color/roxoEscuro"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSaldoMetaAqui"
            android:layout_width="124dp"
            android:layout_height="26dp"
            android:fontFamily="@font/ubuntu"
            android:text="R$00000,00"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeMetaAqui"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewNomeMetaAqui2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/Disponivel"
            android:textColor="@color/roxoEscuro"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.809"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewSaldoDisponivelAqui"
            android:layout_width="124dp"
            android:layout_height="26dp"
            android:fontFamily="@font/ubuntu"
            android:text="R$00000,00"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.742"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNomeMetaAqui2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <ListView
            android:id="@+id/listaMetas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="137dp"></ListView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnNovaMeta"
        android:layout_width="138dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/border"
        android:text="@string/CriarMeta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>

